title change test

--- a/devops-pipeline-demo/Pages/Home.razor
+++ b/devops-pipeline-demo/Pages/Home.razor
@@ -2,4 +2,4 @@
 
 <PageTitle>Home</PageTitle>
 
-<h1>Hello, world! - GRUPO 2</h1>
+<h1>Finalización del pipeline y despliegue en preproducción y producción</h1>
