Agregar lista de miembros del grupo

--- a/devops-pipeline-demo/Pages/Home.razor
+++ b/devops-pipeline-demo/Pages/Home.razor
@@ -3,3 +3,11 @@
 <PageTitle>Home</PageTitle>
 
 <h1>Finalización del pipeline y despliegue en preproducción y producción</h1>
+<h2>Lista de estudiantes del grupo #2</h2>
+<ul>
+  <li>Axel Javier Rosario Cabrera</li>
+  <li>David José Vásquez Fernández</li>
+  <li>Francisco Javier Gutiérrez Sandí</li>
+  <li>James Perez Jimenez</li>
+  <li>Rafael Colón Rosario</li>
+</ul>
